2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (color_button_clicked_cb): remove stuff I forgot
	to delete

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (color_button_clicked_cb): make sure the color
	scheme has changed before writing to GConf and enabling the reset button

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_color_buttons_from_string): simplify
	(check_color_schemes_enabled): fix check for available symbolic colors
	and make buttons for unsupported colors insensitive (bug #464081)
	(color_button_clicked_cb), (style_init): simplify

	* data/appearance.glade: name the color buttons exactly like their
	respective color so we don't need to keep two arrays around

2007-08-05  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init): reinstate select-after-realize;
	it's still necessary

2007-08-05  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Dennis Cranston <dennis_cranston@yahoo.com>

	* data/appearance.glade: Indent category contents, and other HIG
	spacing fixes for "Font Rendering Details" dialog (bug #463332)

2007-08-04  Jens Granseuer  <jensgr@gmx.net>

	Based on a patch by: Dennis Cranston <dennis_cranston@yahoo.com>

        * appearance-style.c: (update_cursor_size_scale) Toggle
        sensitivity of the cursor scale labels (bug #463442)

2007-08-04  Denis Washington  <denisw@svn.gnome.org>

	* appearance-style.c: (prepare_list):
	Only add a "Default Pointer" list item if there is
	no such GnomeThemeCursorInfo.

2007-08-03  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_thumbnail_update): oops, remove
	left-over devel ifdef

2007-08-03  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_color_changed): use gdk_color_to_string
	instead of g_strdup_printf
	* gnome-wp-xml.c: (gnome_wp_xml_load_xml),
	(gnome_wp_xml_load_list): remove check for old glib version that
	would result in bogus code, and save an unnecessary alloc
